--- a/src/ui/Stepper.css
+++ b/src/ui/Stepper.css
@@ -3,13 +3,26 @@
 }
 
 .step-item:not(:first-child):before {
-  @apply content-[''] bg-slate-200 absolute w-full h-[3px] -translate-y-2/4 right-2/4 top-1/3;
+  @apply content-[''] bg-slate-200 absolute w-full h-[3px] -translate-y-2/4 right-2/4 top-1/4;
 }
 
 .step {
-  @apply w-10 h-10 flex z-10 relative bg-slate-700 rounded-full font-semibold text-white justify-center items-center;
+  @apply w-6 h-6 flex z-10 max-sm:text-[12px] text-sm relative bg-slate-700 rounded-full font-semibold text-white justify-center items-center;
 }
 
 .active .step {
   @apply bg-sky-600;
+}
+
+.complete .step {
+  @apply bg-green-600;
+}
+
+.complete p {
+  @apply text-black;
+}
+
+.complete:not(:first-child):before,
+.active:not(:first-child):before {
+  @apply bg-green-600;
 }
